terraform/ec2.tf
#################################################
# Latest Ubuntu 24.04 LTS AMI
#################################################

data "aws_ami" "ubuntu" {

  most_recent = true

  owners = ["099720109477"]

  filter {

    name = "name"

    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]

  }

  filter {

    name = "virtualization-type"

    values = ["hvm"]

  }

}

#################################################
# EC2 Instance
#################################################

resource "aws_instance" "web_server" {

  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type

  subnet_id = aws_subnet.public.id

  vpc_security_group_ids = [

    aws_security_group.web_server.id

  ]

  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  key_name = "wordpress-key"

  associate_public_ip_address = true

  tags = {

    Name = "${var.project_name}-ec2"

    Environment = var.environment

  }

}
