terraform/networking.tf
#################################################
# VPC
#################################################

resource "aws_vpc" "main" {

  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {

    Name = "${var.project_name}-vpc"

    Environment = var.environment

  }

}

#################################################
# Public Subnet
#################################################

resource "aws_subnet" "public" {

  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "${var.aws_region}a"
  map_public_ip_on_launch = true

  tags = {

    Name = "${var.project_name}-public-subnet"

    Environment = var.environment

  }

}

#################################################
# Internet Gateway
#################################################

resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "${var.project_name}-igw"

    Environment = var.environment

  }

}

#################################################
# Public Route Table
#################################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }

  tags = {

    Name = "${var.project_name}-public-rt"

    Environment = var.environment

  }

}

#################################################
# Route Table Association
#################################################

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}
